--- a/projects.json
+++ b/projects.json
@@ -85,8 +85,8 @@
         "videoUrl": "https://youtu.be/QS_bh-3qKdw?si=WWl88d3qwL_rNsBu"
     },
     {
-        "title": "Using Copilot with Jupyter Notebooks",
-        "description": "earn how to record, transcribe, and automate your journaling with Python, OpenAI Whisper, and the terminal!",
+        "title": "OpenAI Whisper and Python: Easy Speech to Text",
+        "description": "Learn how to record, transcribe, and automate your journaling with Python, OpenAI Whisper, and the terminal!",
         "videoUrl": "https://youtu.be/xDKAX2_pul0?si=X--HtiTOcRJSvQvY"
     }
 ]
