--- a/projects.json
+++ b/projects.json
@@ -198,5 +198,10 @@
         "title": "How to Use Gen-2",
         "description": "Use this tutorial to learn how to use Gen-2 in Runway.",
         "videoUrl": "https://youtu.be/dq8GZeDEqH8?si=rZIJmq80kBiFu81S"
+    },
+    {
+        "title": "Introducing Nextcloud Hub 7: The next generation of integrated collaboration",
+        "description": "Nextcloud Hub is the most advanced on-premises collaboration platform in the world. From new integration features to AI enhancements and a completely rewritten Files app, we are sure Hub 7 delivers the solutions you need to foster efficiency, collaboration and productivity - without losing control over your data!",
+        "videoUrl": "https://youtu.be/YohQfObl3I8?si=rOGWGkDVjrUgWpe9"
     }
 ]
