--- a/projects.json
+++ b/projects.json
@@ -223,5 +223,10 @@
         "title": "Using AI To Build A Game From Scratch (NO Experience)",
         "description": "Here's a breakdown of how I used AI to make a video game.",
         "videoUrl": "https://youtu.be/IyKKhxYJ4U4?si=ozzZcRNiai34sFj1"
+    },
+    {
+        "title": "Chat with Multiple PDFs | LangChain App Tutorial in Python",
+        "description": "In this video you will learn to create a Langchain App to chat with multiple PDF files using the ChatGPT API and Huggingface Language Models.",
+        "videoUrl": "https://youtu.be/dXxQ0LR-3Hg?si=IP751rsqPnZGx2R7"
     }
 ]
